{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 146,
  "lineage": "d06e5947-7749-f477-28a3-c146a1d37154",
  "resources": [
    {
      "module": "module.gce",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dos_test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/zones/europe-central2-b/disks/dos-test-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-12-13T08:48:55.211-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/modified-link-444013-i9/zones/europe-central2-b/instances/dos-test-instance",
            "instance_id": "9115435839628893083",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "tLET2krckVE=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y hping3 curl\r\necho \"Machine ready for DoS testing. Use hping3 to test.\"\r\n",
            "name": "dos-test-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.81.60",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/networks/default",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "modified-link-444013-i9"
              }
            ],
            "project": "modified-link-444013-i9",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/zones/europe-central2-b/instances/dos-test-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dos-test"
            ],
            "tags_fingerprint": "2OfIDX7Tj2k=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-b"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer_n_cloud_armor",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/regions/europe-central2/networkEndpointGroups/neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-12-13T05:04:19.097-08:00",
            "description": "Internal side for Cloud Run",
            "enable_cdn": false,
            "fingerprint": "heX5dcQFoIs=",
            "generated_id": 4428724645280190012,
            "id": "projects/modified-link-444013-i9/global/backendServices/backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "ROUND_ROBIN",
            "name": "backend",
            "port_name": "http",
            "project": "modified-link-444013-i9",
            "protocol": "HTTPS",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/securityPolicies/default-security-policy-for-backend-service-backend",
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/backendServices/backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.load_balancer_n_cloud_armor.google_compute_region_network_endpoint_group.neg",
            "module.load_balancer_n_cloud_armor.google_compute_security_policy.default_security_policy"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_n_cloud_armor",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_global_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.8.66.70",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-12-13T06:04:03.574-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/modified-link-444013-i9/global/addresses/global-load-balancer-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "global-load-balancer-ip",
            "prefix_length": 0,
            "project": "modified-link-444013-i9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/addresses/global-load-balancer-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer_n_cloud_armor",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 8669567145668083727,
            "id": "projects/modified-link-444013-i9/global/forwardingRules/frontend",
            "ip_address": "34.8.66.70",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend",
            "port_range": "80-80",
            "project": "modified-link-444013-i9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/forwardingRules/frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/targetHttpProxies/cloud-run-dos-load-balancer-target-proxy"
          },
          "dependencies": [
            "module.load_balancer_n_cloud_armor.google_compute_backend_service.backend",
            "module.load_balancer_n_cloud_armor.google_compute_global_address.lb_global_ip",
            "module.load_balancer_n_cloud_armor.google_compute_region_network_endpoint_group.neg",
            "module.load_balancer_n_cloud_armor.google_compute_security_policy.default_security_policy",
            "module.load_balancer_n_cloud_armor.google_compute_target_http_proxy.http_proxy",
            "module.load_balancer_n_cloud_armor.google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_n_cloud_armor",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "default_security_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Default security policy for: backend",
            "fingerprint": "C4hbhNO-Dso=",
            "id": "projects/modified-link-444013-i9/global/securityPolicies/default-security-policy-for-backend-service-backend",
            "name": "default-security-policy-for-backend-service-backend",
            "project": "modified-link-444013-i9",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Default rate limiting rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483646,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(403)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 25,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/securityPolicies/default-security-policy-for-backend-service-backend",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.load_balancer_n_cloud_armor",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-13T05:05:35.559-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/modified-link-444013-i9/global/targetHttpProxies/cloud-run-dos-load-balancer-target-proxy",
            "name": "cloud-run-dos-load-balancer-target-proxy",
            "project": "modified-link-444013-i9",
            "proxy_bind": false,
            "proxy_id": 2384276309228490736,
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/targetHttpProxies/cloud-run-dos-load-balancer-target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/urlMaps/cloud-run-dos-load-balancer"
          },
          "dependencies": [
            "module.load_balancer_n_cloud_armor.google_compute_backend_service.backend",
            "module.load_balancer_n_cloud_armor.google_compute_region_network_endpoint_group.neg",
            "module.load_balancer_n_cloud_armor.google_compute_security_policy.default_security_policy",
            "module.load_balancer_n_cloud_armor.google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_n_cloud_armor",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-13T05:05:24.203-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/backendServices/backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "8ylDdFzFXG8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/modified-link-444013-i9/global/urlMaps/cloud-run-dos-load-balancer",
            "map_id": 5370669371963314172,
            "name": "cloud-run-dos-load-balancer",
            "path_matcher": [],
            "project": "modified-link-444013-i9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/modified-link-444013-i9/global/urlMaps/cloud-run-dos-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer_n_cloud_armor.google_compute_backend_service.backend",
            "module.load_balancer_n_cloud_armor.google_compute_region_network_endpoint_group.neg",
            "module.load_balancer_n_cloud_armor.google_compute_security_policy.default_security_policy"
          ]
        }
      ]
    }
  ]
}